fix: updated Dockerfile and backend config for Render

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,10 +11,11 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends build-essential libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-COPY backend/requirements.txt /app/requirements.txt
+COPY requirements.txt /app/requirements.txt
 RUN pip install --upgrade pip && pip install -r /app/requirements.txt
 
-COPY backend /app/backend
+# copy backend source into /app/backend (this Dockerfile sits in backend/)
+COPY . /app/backend
 
 ENV MODULE_NAME=backend.app.main:app
 ENV HOST=0.0.0.0
@@ -22,6 +23,7 @@ ENV PORT=8000
 
 EXPOSE 8000
 
-CMD ["uvicorn", "backend.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use Render's PORT if provided, default to 8000 locally
+CMD ["/bin/sh", "-lc", "uvicorn backend.app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
 
 
