--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12-slim
+FROM python:3.12-slim AS builder
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
@@ -12,10 +12,23 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /app/requirements.txt
-RUN pip install --upgrade pip && pip install -r /app/requirements.txt
+RUN pip install --upgrade pip && pip install --prefix=/install -r /app/requirements.txt
 
-# copy backend source into /app/backend (this Dockerfile sits in backend/)
+FROM python:3.12-slim AS runtime
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+WORKDIR /app
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends libpq5 curl \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder /install /usr/local
 COPY . /app/backend
+# Optional: copy .env at build time if present
+COPY --chown=root:root .env /app/.env 2>/dev/null || true
 
 ENV MODULE_NAME=backend.app.main:app
 ENV HOST=0.0.0.0
@@ -23,7 +36,16 @@ ENV PORT=8000
 
 EXPOSE 8000
 
-# Run Alembic migrations then start the app. Use Render's PORT if provided.
-CMD ["sh", "-c", "if [ -d backend/alembic ]; then alembic -c backend/alembic.ini upgrade head; fi && uvicorn backend.app.main:app --host 0.0.0.0 --port $PORT"]
+# Create non-root user
+RUN addgroup --system appgroup && adduser --system --ingroup appgroup appuser \
+    && chown -R appuser:appgroup /app
+USER appuser
+
+# HEALTHCHECK for liveness
+HEALTHCHECK --interval=30s --timeout=5s --start-period=20s --retries=3 \
+  CMD curl -fsS http://127.0.0.1:${PORT:-8000}/health || exit 1
+
+# Run Alembic migrations then start the app (fail fast if migrations fail)
+CMD ["sh", "-c", "alembic -c backend/alembic.ini upgrade head && uvicorn backend.app.main:app --host 0.0.0.0 --port $PORT"]
 
 
