--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ python-jose>=3.3,<4.0
 passlib[bcrypt]>=1.7,<2.0
 pydantic>=2.5,<3.0
 pydantic-settings>=2.2,<3.0
+email-validator>=2.0,<3.0
 sentry-sdk>=2.0,<3.0
 python-multipart>=0.0.7,<1.0
 pytest>=7.0,<9.0
