--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,8 @@ SQLAlchemy>=2.0,<3.0
 alembic>=1.12,<2.0
 psycopg2-binary>=2.9,<3.0
 python-jose>=3.3,<4.0
-passlib[bcrypt]>=1.7,<2.0
+passlib[bcrypt]>=1.7.4,<2.0
+bcrypt==3.2.2
 pydantic>=2.5,<3.0
 pydantic-settings>=2.2,<3.0
 email-validator>=2.0,<3.0
