--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^2.13.3",
     "zustand": "^4.5.2"
   },
@@ -33,5 +34,3 @@
     "typescript": "^5.4.5"
   }
 }
-
-
