Deploy admin & backend

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,4 +17,7 @@ ruff>=0.4,<1.0
 feedparser>=6.0,<7.0
 openai>=1.0,<2.0
 stripe>=5.0,<10.0
+slowapi>=0.1.7,<0.2.0
+structlog>=24.0,<25.0
+prometheus-fastapi-instrumentator>=7.0.0,<8.0.0
 
